--- a/config.ini
+++ b/config.ini
@@ -1,19 +1,19 @@
 [Path]
-DIR_IN = /
-DIR_OUT = /
+DIR_IN = /media/lfc/ボリューム1/M1/result/2022_01_23/pre/calib/cbi_q_05/_
+DIR_OUT = /media/lfc/ボリューム1/M1/result/2022_01_23/piv/gx_48_gy_48_t_24_s_48_th_60/cbi_q_05/
 
 [i]
 start = 0
-end = 1
+end = 3200
 iter = 1
 
 [Grid]
-x = 16
-y = 16
+x = 48
+y = 48
 
 [Window]
-t = 16
-s = 32
+t = 24
+s = 48
 
 [Params]
-threshold = 10
+threshold = 60
