--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.21)
+cmake_minimum_required(VERSION 3.17)
 project(piv_c)
 
 set(CMAKE_CXX_STANDARD 14)
@@ -12,5 +12,5 @@ target_link_libraries(piv_c ${OpenCV_LIBS})
 
 # for Boost
 find_package(Boost 1.57.0 COMPONENTS thread filesystem system coroutine context chrono container)
-include_directories(${Boost_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR})
+include_directories(${Boost_INCLUDE_DIRS} .)
 target_link_libraries(piv_c ${Boost_LIBRARIES})
