--- a/test.ini
+++ b/test.ini
@@ -1,10 +1,10 @@
 [Path]
-DIR_IN = /media/lfc/ボリューム1/M1/result/2022_01_23/pre/calib/cbi_q_05/_
-DIR_OUT = /media/lfc/ボリューム1/M1/result/2022_01_23/piv/gx_48_gy_48_t_24_s_48_th_60/cbi_q_05/
+DIR_IN = ../data/in/_
+DIR_OUT = ../data/out/
 
 [i]
 start = 0
-end = 3200
+end = 100
 iter = 1
 
 [Grid]
@@ -12,8 +12,8 @@ x = 48
 y = 48
 
 [Window]
-t = 24
+t = 48
 s = 48
 
 [Params]
-threshold = 60
+threshold = 30
